welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var tab= new Array[Color](getMondeHauteur())
	def remplirTab():Array[Color]={ 
	for (i<-0 to getMondeHauteur()-1) {tab(i) = getCouleurSol()}}
	remplirTab() 
}
